# routes/index.js
@@ -16,6 +16,7 @@ router.get('/', (req, res) => {
 router.use('/media', require('./mediaRoutes'));
 router.use('/review', require('./reviewRoutes'));
 router.use('/tag', require('./tagRoutes'));
+router.use('/admin', require('./adminRoutes'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
 
